--- a/package.json
+++ b/package.json
@@ -15,4 +15,7 @@
     "jade": "~1.11.0",
     "knex": "^3.1.0",
     "morgan": "~1.9.1",
-    "my
+    "mysql2": "^3.9.7",
+    "swagger-ui-express": "^5.0.0"
+  }
+}
